# isqa

./: .dockerignore  .gitignore  .pre-commit-config.yaml  HISTORY.rst  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
isqa/: cli.py  common.py  configs.py  constants.py  exceptions.py  helpers.py  html.py  logger.py  notifier.py  version.py
taskfiles/: Taskfile_git.yml  Taskfile_pre_commit.yml  Taskfile_python.yml
templates/: due-date-expired.html  due-date-expired.txt  missing-assignee.html  missing-assignee.txt  missing-label.html  missing-label.txt  problem.html  problem.txt
